muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__html5__html5.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            DefaultNamespaceDeclaration {
                prefix: None,
                uri: "http://www.w3.org/1999/xhtml",
            },
        ),
    ],
    body: Grammar(
        Grammar {
            contents: [
                Include(
                    Include {
                        uri: "common.rnc",
                        inherit: None,
                        contents: [
                            Definition(
                                Definition {
                                    name: Identifier {
                                        component: "XMLonly",
                                        sub_components: [],
                                    },
                                    combine: None,
                                    pattern: NotAllowed,
                                },
                            ),
                            Definition(
                                Definition {
                                    name: Identifier {
                                        component: "HTMLonly",
                                        sub_components: [],
                                    },
                                    combine: None,
                                    pattern: Empty,
                                },
                            ),
                            Definition(
                                Definition {
                                    name: Identifier {
                                        component: "v5only",
                                        sub_components: [],
                                    },
                                    combine: None,
                                    pattern: Empty,
                                },
                            ),
                            Definition(
                                Definition {
                                    name: Identifier {
                                        component: "nonHTMLizable",
                                        sub_components: [],
                                    },
                                    combine: None,
                                    pattern: NotAllowed,
                                },
                            ),
                            Definition(
                                Definition {
                                    name: Identifier {
                                        component: "nonRoundtrippable",
                                        sub_components: [],
                                    },
                                    combine: None,
                                    pattern: NotAllowed,
                                },
                            ),
                        ],
                    },
                ),
                Start(
                    Start {
                        combine: None,
                        pattern: Name(
                            Name {
                                prefix: None,
                                local: Identifier {
                                    component: "html",
                                    sub_components: [
                                        "elem",
                                    ],
                                },
                            },
                        ),
                    },
                ),
                Include(
                    Include {
                        uri: "meta.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "phrase.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "block.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "sectional.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "structural.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "revision.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "embed.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "ruby.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "media.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "core-scripting.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "tables.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "form-datatypes.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "web-forms.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "web-forms2.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "applications.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "data.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "aria.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "microdata.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
                Include(
                    Include {
                        uri: "web-components.rnc",
                        inherit: None,
                        contents: [],
                    },
                ),
            ],
        },
    ),
}
