muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__html5__html5exclusions.rnc.snap
---
source: muffy-rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [
        DefaultNamespace(
            "http://www.w3.org/1999/xhtml",
        ),
    ],
    body: Grammar(
        Grammar {
            contents: [
                Start {
                    combine: None,
                    pattern: Name(
                        Name {
                            prefix: None,
                            local: Identifier {
                                component: "normal",
                                sub_components: [
                                    "elem",
                                    "all-inclusive",
                                ],
                            },
                        },
                    ),
                },
                Definition(
                    Definition {
                        name: Identifier {
                            component: "normal",
                            sub_components: [
                                "attr",
                                "anything",
                            ],
                        },
                        combine: None,
                        pattern: Many0(
                            Attribute {
                                name_class: Any,
                                pattern: Text,
                            },
                        ),
                    },
                ),
                Definition(
                    Definition {
                        name: Identifier {
                            component: "normal",
                            sub_components: [
                                "elem",
                                "all",
                            ],
                        },
                        combine: None,
                        pattern: Element {
                            name_class: Except {
                                base: Any,
                                except: Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "dfn",
                                            sub_components: [],
                                        },
                                    },
                                ),
                            },
                            pattern: Name(
                                Name {
                                    prefix: None,
                                    local: Identifier {
                                        component: "normal",
                                        sub_components: [
                                            "elem",
                                            "all-inclusive",
                                        ],
                                    },
                                },
                            ),
                        },
                    },
                ),
                Definition(
                    Definition {
                        name: Identifier {
                            component: "normal",
                            sub_components: [
                                "elem",
                                "all-inclusive",
                            ],
                        },
                        combine: None,
                        pattern: Choice(
                            [
                                Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "wildcard",
                                            sub_components: [
                                                "elem",
                                                "exclude-all",
                                            ],
                                        },
                                    },
                                ),
                                Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "dfn",
                                            sub_components: [
                                                "elem",
                                                "exclude-self",
                                            ],
                                        },
                                    },
                                ),
                            ],
                        ),
                    },
                ),
                Definition(
                    Definition {
                        name: Identifier {
                            component: "normal",
                            sub_components: [
                                "elem",
                                "exclude-dfn",
                            ],
                        },
                        combine: None,
                        pattern: Element {
                            name_class: Except {
                                base: Any,
                                except: Name(
                                    Name {
                                        prefix: None,
                                        local: Identifier {
                                            component: "dfn",
                                            sub_components: [],
                                        },
                                    },
                                ),
                            },
                            pattern: Name(
                                Name {
                                    prefix: None,
                                    local: Identifier {
                                        component: "normal",
                                        sub_components: [
                                            "elem",
                                            "exclude-dfn",
                                        ],
                                    },
                                },
                            ),
                        },
                    },
                ),
                Definition(
                    Definition {
                        name: Identifier {
                            component: "dfn",
                            sub_components: [
                                "elem",
                                "exclude-self",
                            ],
                        },
                        combine: None,
                        pattern: Element {
                            name_class: Name(
                                Name {
                                    prefix: None,
                                    local: Identifier {
                                        component: "dfn",
                                        sub_components: [],
                                    },
                                },
                            ),
                            pattern: Interleave(
                                [
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "normal",
                                                sub_components: [
                                                    "attr",
                                                    "anything",
                                                ],
                                            },
                                        },
                                    ),
                                    Name(
                                        Name {
                                            prefix: None,
                                            local: Identifier {
                                                component: "normal",
                                                sub_components: [
                                                    "elem",
                                                    "exclude-dfn",
                                                ],
                                            },
                                        },
                                    ),
                                ],
                            ),
                        },
                    },
                ),
                Definition(
                    Definition {
                        name: Identifier {
                            component: "wildcard",
                            sub_components: [
                                "elem",
                                "exclude-all",
                            ],
                        },
                        combine: None,
                        pattern: NotAllowed,
                    },
                ),
            ],
        },
    ),
}
