muffy-rnc/src/snapshots/muffy_rnc__parse__tests__schema__html5__web-forms-scripting.rnc.snap
---
source: rnc/src/parse.rs
expression: parse_schema(&read_to_string(&path).unwrap()).unwrap()
---
Schema {
    declarations: [],
    body: Grammar(
        Grammar {
            contents: [
                Definition(
                    Definition {
                        name: Identifier {
                            component: "scripting",
                            sub_components: [
                                "attr",
                                "form",
                                "select",
                            ],
                        },
                        combine: None,
                        pattern: Attribute {
                            name_class: Name(
                                Name {
                                    prefix: None,
                                    local: Identifier {
                                        component: "onselect",
                                        sub_components: [],
                                    },
                                },
                            ),
                            pattern: Data {
                                name: String,
                                parameters: [],
                                except: None,
                            },
                        },
                    },
                ),
                Definition(
                    Definition {
                        name: Identifier {
                            component: "scripting",
                            sub_components: [
                                "attr",
                                "form",
                                "change",
                            ],
                        },
                        combine: None,
                        pattern: Attribute {
                            name_class: Name(
                                Name {
                                    prefix: None,
                                    local: Identifier {
                                        component: "onchange",
                                        sub_components: [],
                                    },
                                },
                            ),
                            pattern: Data {
                                name: String,
                                parameters: [],
                                except: None,
                            },
                        },
                    },
                ),
                Definition(
                    Definition {
                        name: Identifier {
                            component: "scripting",
                            sub_components: [
                                "attr",
                                "form",
                                "submit",
                            ],
                        },
                        combine: None,
                        pattern: Attribute {
                            name_class: Name(
                                Name {
                                    prefix: None,
                                    local: Identifier {
                                        component: "onsubmit",
                                        sub_components: [],
                                    },
                                },
                            ),
                            pattern: Data {
                                name: String,
                                parameters: [],
                                except: None,
                            },
                        },
                    },
                ),
                Definition(
                    Definition {
                        name: Identifier {
                            component: "scripting",
                            sub_components: [
                                "attr",
                                "form",
                                "reset",
                            ],
                        },
                        combine: None,
                        pattern: Attribute {
                            name_class: Name(
                                Name {
                                    prefix: None,
                                    local: Identifier {
                                        component: "onreset",
                                        sub_components: [],
                                    },
                                },
                            ),
                            pattern: Data {
                                name: String,
                                parameters: [],
                                except: None,
                            },
                        },
                    },
                ),
            ],
        },
    ),
}
